// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<JobError /> > renders correctly with error details 1`] = `
<Styled(Alert)
  color="red"
>
  <div>
    Traceback (most recent call last):
  </div>
  <div
    key="0"
  >
    line one
  </div>
  <div
    key="1"
  >
    line two
  </div>
  <div
    key="2"
  >
    line three
  </div>
  <p>
    TestErrorWithStackTrace
    <styled.span>
      : 
      test error details
    </styled.span>
  </p>
</Styled(Alert)>
`;

exports[`<JobError /> > renders correctly without error details 1`] = `
<Styled(Alert)
  color="red"
>
  <div>
    Traceback (most recent call last):
  </div>
  <p>
    TestErrorWithoutStackTrace
  </p>
</Styled(Alert)>
`;
